hphp/hack/test/typecheck/reified_generics/is-expression-generics-tuples.php.exp
WARN: File "is-expression-generics-tuples.php", line 9, characters 3-12:
This `is` check is always `true`. The expression on the left has type `C<(int, string)>` which is a subtype of `C<(int, string)>`. (Warn[12009])
WARN: File "is-expression-generics-tuples.php", line 12, characters 3-24:
This `is` check is always `true`. The expression on the left has type `C<(int, string)>` which is a subtype of `C<(int, string)>`. (Warn[12009])
WARN: File "is-expression-generics-tuples.php", line 13, characters 3-19:
This `is` check is always `true`. The expression on the left has type `C<(int, string)>` which is a subtype of `C<(int, _)>`. (Warn[12009])
WARN: File "is-expression-generics-tuples.php", line 14, characters 3-22:
This `is` check is always `true`. The expression on the left has type `C<(int, string)>` which is a subtype of `C<(_, string)>`. (Warn[12009])
WARN: File "is-expression-generics-tuples.php", line 15, characters 3-17:
This `is` check is always `true`. The expression on the left has type `C<(int, string)>` which is a subtype of `C<(_, _)>`. (Warn[12009])
ERROR: File "is-expression-generics-tuples.php", line 13, characters 9-19:
Invalid `is` expression hint (Typing[4195])
  File "is-expression-generics-tuples.php", line 13, characters 17-17:
  The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
ERROR: File "is-expression-generics-tuples.php", line 14, characters 9-22:
Invalid `is` expression hint (Typing[4195])
  File "is-expression-generics-tuples.php", line 14, characters 12-12:
  The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
ERROR: File "is-expression-generics-tuples.php", line 15, characters 9-17:
Invalid `is` expression hint (Typing[4195])
  File "is-expression-generics-tuples.php", line 15, characters 12-12:
  The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
  File "is-expression-generics-tuples.php", line 15, characters 15-15:
  The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
ERROR: File "is-expression-generics-tuples.php", line 16, characters 9-19:
Invalid `is` expression hint (Typing[4195])
  File "is-expression-generics-tuples.php", line 16, characters 12-12:
  The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
